Fix misalignment issue in repo header

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -1607,8 +1607,8 @@
 	}
 }
 
-.commit-list {
-	vertical-align: baseline;
+tbody.commit-list {
+    vertical-align: baseline;
 }
 
 .commit-body {
